compiler-core/src/parse/snapshots/gleam_core__parse__tests__no_let_binding_snapshot_2.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 358
expression: "foo:Int = 4"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:1:4
  │
1 │ foo:Int = 4
  │    ^ There must be a 'let' to bind variable to value

Hint: Use let for binding
See: https://gleam.run/book/tour/let-bindings

